# FinancialChallenge

./: .gitignore  README.md  cluster_analysis.py  config.yaml  config_ae.yaml  finetune.py  generate_stats.py  pyproject.toml  requirements.txt  test.py  train.py  train_ae.py  tune.py
EDA/: sp500_visualization.py
checkpoints_verify/verify_fix_run/: stats.pt
data/: dataloader.py
data/processed/: es1dia_cln.csv
dataloader/: dataloader.py
machine_learning/: classification.py  clustering.py  dataloader.py  regression.py
machine_learning/__marimo__/session/: classification.py.json  clustering.py.json
model/: autoencoder.py  model.py
models/: FiT.py
options/: options.py  test_model.yaml  train_model.yaml
tests/: verify_dataloader.py  verify_model.py  verify_norm.py  verify_pytorch.py
