[project]
name = "financechallenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arrow==1.3.0",
    "attrs==25.3.0",
    "boto3==1.40.45",
    "botocore==1.40.45",
    "bravado==11.1.0",
    "bravado-core==6.1.1",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.3",
    "click==8.3.0",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "filelock==3.19.1",
    "fonttools==4.60.1",
    "fqdn==1.5.1",
    "fsspec==2025.9.0",
    "future==1.0.0",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "idna==3.10",
    "importlib-resources==6.5.2",
    "isoduration==20.11.0",
    "jinja2==3.1.6",
    "jmespath==1.0.1",
    "jsonpointer==3.0.0",
    "jsonref==1.1.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "kiwisolver==1.4.9",
    "lark==1.3.0",
    "markupsafe==3.0.3",
    "matplotlib==3.10.6",
    "monotonic==1.6",
    "mpmath==1.3.0",
    "msgpack==1.1.1",
    "neptune==1.14.0",
    "networkx==3.4.2",
    "numpy==2.2.6",
    "oauthlib==3.3.1",
    "packaging==25.0",
    "pandas==2.3.3",
    "pillow==11.3.0",
    "psutil==7.1.0",
    "pyjwt==2.10.1",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "referencing==0.36.2",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rfc3987-syntax==1.1.0",
    "rpds-py==0.27.1",
    "s3transfer==0.14.0",
    "scipy>=1.15.3",
    "seaborn==0.13.2",
    "simplejson==3.20.2",
    "six==1.17.0",
    "smmap==5.0.2",
    "swagger-spec-validator==3.0.4",
    "sympy==1.14.0",
    "torch==2.8.0",
    "tqdm==4.67.1",
    "types-python-dateutil==2.9.0.20250822",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "uri-template==1.3.0",
    "urllib3==2.5.0",
    "webcolors==24.11.1",
    "websocket-client==1.8.0",
]
